<resources>
    <string name="app_name">CalculatorProject</string>
    <string name="str01">Preu inmoble (€)</string>
    <string name="str02">Estalvis</string>
    <string name="str03">Plac (anys)</string>
    <string name="str04">Euribor</string>
    <string name="str05">Diferencial</string>
    <string name="button01">CALCULAR</string>
    <string name="textview_mes">Mes: 0</string>
    <string name="textview_total">Total: 0</string>
    <string name="mesTextview">"Mes: "</string>
    <string name="totalTextView">"Total: "</string>
    <string name="titleApp">Hipoteques</string>
</resources>