<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/str02_estalvis"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/str02"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/str03_plac"
        app:layout_constraintEnd_toStartOf="@+id/editText02_estalvis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/str03_plac"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/str03"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/str04_euribor"
        app:layout_constraintEnd_toStartOf="@+id/editText03_plac"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/str05_diferencial"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="120dp"
        android:text="@string/str05"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/editText05_diferencial"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/str01_precio_inmueble"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/str01"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/str02_estalvis"
        app:layout_constraintEnd_toStartOf="@+id/editText01_precio_inmueble"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/str04_euribor"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/str04"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/str05_diferencial"
        app:layout_constraintEnd_toStartOf="@+id/editText04_euribor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText01_precio_inmueble"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:text="120000"
        app:layout_constraintBottom_toTopOf="@+id/editText02_estalvis"
        app:layout_constraintEnd_toEndOf="parent" />

<!--    ************************ -->
    <EditText
        android:id="@+id/editText03_plac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:text="30"
        app:layout_constraintBottom_toTopOf="@+id/editText04_euribor"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText05_diferencial"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="120dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        android:text="2.5"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText04_euribor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        android:text="0.163"
        app:layout_constraintBottom_toTopOf="@+id/editText05_diferencial"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText02_estalvis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:text="2000"
        app:layout_constraintBottom_toTopOf="@+id/editText03_plac"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/button01_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/button01"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText05_diferencial"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.500684" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="250dp"
        android:background="@color/blue"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-10dp">

        <TextView
            android:id="@+id/textView01_mes"
            android:layout_width="205.5dp"
            android:layout_height="60dp"
            android:text="@string/textview_mes"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/textView02_total"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="398dp" />

        <TextView
            android:id="@+id/textView02_total"
            android:layout_width="205.5dp"
            android:layout_height="60dp"
            android:text="@string/textview_total"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView01_mes"
            tools:layout_editor_absoluteY="398dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>